applied styles for landscape desktop

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -72,7 +72,7 @@
 
         <div class="cart-summary">
             {% if shippingfee == "FREE" %}
-            <p>FREE SHIPPING!</p>
+            <p class="free-shipping-message">FREE SHIPPING!</p>
             {% else %}
             <p class="shipping-fee ha">incl. {{shippingfee}} EUR Shipping</p>
             {% endif %}
