--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,9 @@
                     </li>
                     <li class="desktop-navbar-icons">
                         {% if "products" in app_path %}
-                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple active-app"></span></a>
+                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon products-icon glyphicon-apple active-app"></span></a>
                         {% else %}
-                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon glyphicon-apple"></span></a>
+                        <a href="{% url 'products' %}" title="Products"><span class="glyphicon products-icon glyphicon-apple"></span></a>
                         {% endif %}
                     </li>
                     <li class="desktop-navbar-icons">
