--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="registration-wrapper ha">
     <div class="page-headline ha">Registration</div>
-    <div id="registration-message">If you have already an account, <br> you can sign in <a
+    <div id="registration-message">If you have already an account, you can sign in <a
             href="{% url 'login' %}">here</a></div>
     <form id="registrationform" method="POST" action="">
         {% csrf_token %}
