--- a/reviews/templates/reviews.html
+++ b/reviews/templates/reviews.html
@@ -7,6 +7,7 @@
 <div class="reviews-wrapper ha">
         {% if reviews %}
 
+        <div class="page-headline ha">Reviews by users</div>
         <div class="search-field-wrapper ha">
             <div class="display">
                 <form action="{% url 'review_search' %}" method="GET">
