--- a/static/scss/_partials/landscape-desktop/pages/_login-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_login-page.scss
@@ -2,21 +2,19 @@
     align-content: center;
     padding: {
         top: 2vw;
-        bottom: 25vw;
 
     }
     background-color: #9e988fcb;
-    min-height: 85vh;
+    min-height: 92vh;
 }
 
 #loginform {
-    width: 90vw;
+    width: 30vw;
 }
 
 #reset-register-wrapper,
 #login-btn-wrapper {
     display: flex;
-    width: 100%;
 
     margin: {
         top: 2vw;
@@ -24,31 +22,42 @@
     }
 }
 
+#login-btn-wrapper {
+    width: 100%;
+
+}
+
+#reset-register-wrapper {
+    width: 100%;
+
+}
+
+
 #login-btn {
     background-color: lightblue;
     color: rgb(65, 65, 65);
-    width: 40vw;
+    width: 14vw;
     font-family: $dosisFont;
-    font-size: 5.5vw;
+    font-size: 2.0vw;
     transition: color .3s ease-in-out;
 }
 
 
 #password-reset-link {
     background-color: orange;
-    margin-right: 2.4vw;
+    margin-right: 0.4vw;
 }
 
 #register-link {
     background-color: rgb(0, 170, 0);
-    margin-left: 2.4vw;
+    margin-left: 0.4vw;
 }
 
 
 #password-reset-link,  #register-link {
-    width: 44vw;
+    width: 14.5vw;
     font-family: $dosisFont;
-    font-size: 4.5vw;
+    font-size: 2.0vw;
 }
 
 
