--- a/static/scss/_partials/landscape-desktop/pages/_password-reset-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_password-reset-page.scss
@@ -1,10 +1,12 @@
 .password-reset-wrapper {
     height: 70vh;
     align-content: center;
+    background-color: #9e988fcb;
+    min-height: 92vh;
 }
 
 .accountform {
-    width: 90vw;
+    width: 28vw;
     padding-top: 20px;
 }
 
@@ -32,8 +34,8 @@
 .pw-reset-btn {
     width: 80%;
     font-family: $dosisFont;
-    font-size: 5.5vw;
-    margin-top: 6vw;
+    font-size: 2.0vw;
+    margin-top: 2.0vw;
     background-color: orange;
     transition: color .3s ease-in-out;
 }
