--- a/static/scss/_partials/landscape-desktop/pages/_products-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_products-page.scss
@@ -1,7 +1,7 @@
 .product-wrapper {
     padding: {
-        top: 2vw;
-        bottom: 25vw;
+        top: 1vw;
+        bottom: 1vw;
     }
         
     background-color: #9e988fcb;
@@ -9,7 +9,18 @@
 
 .search-field-wrapper {
     width: 100%;
-    padding-bottom: 10vw;
+    padding: {
+        top: 2vw;
+        bottom: 2vw;
+    }
+}
+
+.productcard {
+    width: 32vw;
+    margin: {
+        left: 5px;
+        right: 5px;
+    }
 }
 
 .panel-default {
@@ -20,29 +31,33 @@
     height: 100%;
     border: 1px solid #ddd;
     background-color: cornsilk;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .product-image {
-    width: 50vw;
-    height: 37.5vw;
+    width: 20vw;
+    height: 15vw;
     border: none;
     border-radius: 5px;
 }
 
 .add-review-btn {
-    font-size: 5.5vw;
+    font-size: 2.5vw;
     color: rgb(65, 106, 236);
 }
 
 
 .product-headline {
     font-family: $dosisFont;
-    font-size: 6.5vw;
+    font-size: 2.0vw;
+    width: 100%;
 }
 
 
 .product-description {
     min-height: 40px;
+    width: 100%;
 }
 
 h3 .product-headline {
@@ -57,14 +72,17 @@ h3 .product-headline {
 }
 
 .stats-key {
-    width: 21vw;
+    width: 6vw;
 }
 
 .stats-value {
-    width: 52vw;;
+    width: 23vw;;
 }
 
 .stats-value a {
     text-decoration: none;
 }
 
+.cart-form {
+    width: 100%;
+}
