--- a/static/scss/_partials/landscape-desktop/pages/_register-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_register-page.scss
@@ -2,19 +2,20 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    padding-bottom: 20vw;
+    padding-bottom: 2vw;
+    background-color: #9e988fcb;
 }
 
 #registration-message {
     width: 90vw;
     margin: {
-        top: 4vw;
-        bottom: 4vw;
+        bottom: 1.5vw;
     }
+    text-align: center;
 }
 
 #registrationform {
-    width: 90vw;
+    width: 30vw;
 }
 
 #submit-registration-btn-wrapper {
@@ -22,10 +23,14 @@
 }
 
 #submit-registration-btn {
-    width: 40vw;
+    width: 14vw;
     background-color: lightblue;
     color: rgb(65, 65, 65);
     font-family: $dosisFont;
-    font-size: 5.5vw;
+    font-size: 2.0vw;
     transition: color .3s ease-in-out;
+}
+
+#submit-registration-btn:hover {
+    color: darkred;
 }
