--- a/static/scss/_partials/landscape-desktop/pages/_wishlist-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_wishlist-page.scss
@@ -1,28 +1,25 @@
 .wishlist-wrapper {
     padding: {
         top: 2vw;
-        bottom: 25vw;
+        bottom: 2vw;
 
     }
     background-color: #9e988fcb;
-    min-height: 82vh;
+    min-height: 92vh;
 }
 
 .wishlist-remove-btn {
-    width: 8vw;
-    position: absolute;
-    left: 69vw;
-    top: 4vw;
+    width: 30vw;
     color: rgb(189, 0, 0);
 }
 
 .wishlist-remove-btn i {
-    font-size: 7.5vw;
+    font-size: 2.5vw;
 }
 
 .staricon-not-added,
 .staricon-added {
-    font-size: 7.5vw;
+    font-size: 2.5vw;
 }
 
 .staricon-not-added {
@@ -40,12 +37,13 @@
 }
 
 #empty-wishlist-wrapper p {
-    font-size: 5.5vw;
+    font-size: 2.5vw;
 
 }
 
 #empty-wishlist-product-link {
     width: 80%;
-    font-size: 8vw;
+    font-size: 4vw;
     text-align: center;
+    text-decoration: none;
 }
