finalized styles on edit review dialog

--- a/static/scss/_partials/landscape-desktop/pages/_productdetails-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_productdetails-page.scss
@@ -18,13 +18,14 @@
 
 #to-products-btn-wrapper {
     margin: {
-        top: 6vw;
-        bottom: 4vw;
+        top: 2vw;
+        bottom: 2vw;
     }
+    width: 100%;
 }
 
 #to-products-btn {
-    width: 29vw;
+    width: 14vw;
     font-size: 2.0vw;
     background-color: lightblue;
     color: black;
