--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1859,11 +1859,12 @@
     background-color: transparent;
   }
   #to-products-btn-wrapper {
-    margin-top: 6vw;
-    margin-bottom: 4vw;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
+    width: 100%;
   }
   #to-products-btn {
-    width: 29vw;
+    width: 14vw;
     font-size: 2.0vw;
     background-color: lightblue;
     color: black;
@@ -2078,15 +2079,16 @@
     width: 100%;
   }
   .edit-review-wrapper {
-    padding-bottom: 25vw;
+    padding-bottom: 2vw;
     min-height: 82vh;
-    padding-top: 10vw;
+    padding-top: 2vw;
+    background-color: #9e988fcb;
   }
   #review-form {
-    width: 90vw;
+    width: 30vw;
   }
   #id_image {
-    height: 13vw;
+    height: 4vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2099,19 +2101,19 @@
   }
   #review-send-btn {
     font-family: "Dosis", sans-serif;
-    font-size: 5.5vw;
+    font-size: 2.0vw;
     background-color: lightblue;
-    width: 40vw;
+    width: 8vw;
     margin-right: 2vw;
     -webkit-transition: color .3s ease-in-out;
     transition: color .3s ease-in-out;
   }
   #review-cancel-btn {
     font-family: "Dosis", sans-serif;
-    font-size: 5.5vw;
+    font-size: 2.0vw;
     background-color: orange;
     color: #414141;
-    width: 40vw;
+    width: 8vw;
     margin-left: 2vw;
     -webkit-transition: color .3s ease-in-out;
     transition: color .3s ease-in-out;
@@ -2187,6 +2189,7 @@
     font-size: 2.5vw;
     margin-bottom: 2vw;
     width: 100%;
+    text-align: center;
   }
   .review-headline a {
     text-decoration: none;
